fix: removed bug, now is scrollbar visible

--- a/addTask_code/addTask.css
+++ b/addTask_code/addTask.css
@@ -39,7 +39,6 @@
   overflow-y: auto;
   overflow-x: hidden;
   position: relative;
-  overflow: visible;
 }
 
 .task-title-addTask_page {
